--- a/Picturegram.html
+++ b/Picturegram.html
@@ -6,19 +6,19 @@
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 	<style type="text/css">
-*{
-	box-sizing: border-box;
-}
+		*{
+			box-sizing: border-box;
+		}
 
-h1 {text-align: center;
-font-family: Lobster;
-font-size: 50px
-margin: 0;}
+			h1 {text-align: center;
+			font-family: Lobster;
+			font-size: 50px
+			margin: 0;}
 
-	img {
-		border: 2px solid lavender;
-		width: 200px;
-		height: auto;
+		img {
+			border: 2px solid lavender;
+			width: 200px;
+			height: auto;
 		
 		}
 
@@ -37,6 +37,7 @@ margin: 0;}
 		img:hover {
 			border: 2px solid magenta; 
 			cursor: pointer;
+			background: red;
 		}
 	</style>
 	
